Compiling with Maven works by using latest compiler plugin version and fixing argument configuration