@@ -27,61 +27,23 @@
 
 	<dependencies>
 
-		<!-- PUBLIC JZY3D MODULES
-
-		<dependency>
-			<groupId>org.jzy3d</groupId>
-			<artifactId>jzy3d-native-jogl-awt</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jzy3d</groupId>
-			<artifactId>jzy3d-emul-gl-awt</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jzy3d</groupId>
-			<artifactId>jzy3d-tester-native</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jzy3d</groupId>
-			<artifactId>jzy3d-tests-java9</artifactId>
-			<version>${project.version}</version>
-		</dependency> -->
+		<!-- PUBLIC JZY3D MODULES <dependency> <groupId>org.jzy3d</groupId> <artifactId>jzy3d-native-jogl-awt</artifactId> 
+			<version>${project.version}</version> </dependency> <dependency> <groupId>org.jzy3d</groupId> 
+			<artifactId>jzy3d-emul-gl-awt</artifactId> <version>${project.version}</version> 
+			</dependency> <dependency> <groupId>org.jzy3d</groupId> <artifactId>jzy3d-tester-native</artifactId> 
+			<version>${project.version}</version> </dependency> <dependency> <groupId>org.jzy3d</groupId> 
+			<artifactId>jzy3d-tests-java9</artifactId> <version>${project.version}</version> 
+			</dependency> -->
 
 
-		<!-- OTHER MODULES 
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-collections4</artifactId>
-			<version>4.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>24.0-jre</version>
-		</dependency>
-		<dependency>
-			<groupId>com.miglayout</groupId>
-			<artifactId>miglayout</artifactId>
-			<version>3.7.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.9</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>-->
+		<!-- OTHER MODULES <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
+			<version>1.2.16</version> </dependency> <dependency> <groupId>org.apache.commons</groupId> 
+			<artifactId>commons-collections4</artifactId> <version>4.4</version> </dependency> 
+			<dependency> <groupId>com.google.guava</groupId> <artifactId>guava</artifactId> 
+			<version>24.0-jre</version> </dependency> <dependency> <groupId>com.miglayout</groupId> 
+			<artifactId>miglayout</artifactId> <version>3.7.4</version> </dependency> 
+			<dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> <version>4.9</version> 
+			<type>jar</type> <scope>test</scope> </dependency> -->
 	</dependencies>
 
 	<build>
@@ -101,16 +63,13 @@
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>17</source>
 					<target>17</target>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>jdk.incubator.foreign</arg>
-						<arg>--add-exports</arg>
-						<arg>jdk.incubator.foreign</arg>
+						<arg>--add-modules=jdk.incubator.foreign</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
@@ -144,6 +103,10 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
+				<version>2.4</version> <configuration> <archive> <manifest> <mainClass>Teapot</mainClass> 
+				</manifest> </archive> </configuration> </plugin> -->
 		</plugins>
 	</build>
 
